--- a/src/web/shell.html
+++ b/src/web/shell.html
@@ -100,7 +100,9 @@
 
       .footer {
           width: 100%;
-          margin: 10px;
+          margin: 0;
+          margin-top: 10px;
+          margin-bottom: 10px;
           text-align: center;
       }
 
